# info-site-kw-research-cluster

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT.md  HANDOFF.md  PROJECT_BRIEF.md  README.md  handoff.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  railway.json
backend/app/: cancellation.py  cluster_dedupe.py  concurrency.py  config.py  cost.py  cost_attribution.py  cost_meter.py  csv_export.py  jobs.py  main.py
backend/app/api/: debug.py  exports.py  health.py  projects.py  schedules.py  sessions.py
backend/app/auth/: __init__.py  dependencies.py
backend/app/briefgen/: __init__.py  answer_contract.py  assemble.py  authority.py  cache.py  coverage.py  decision_fit.py  entity.py  faq.py  gates.py  h3.py  intent.py  mcs.py  models.py  persona.py  pipeline.py  sources.py  title.py
backend/app/dataforseo/: __init__.py  client.py
backend/app/llm/: __init__.py  anthropic_client.py  embeddings.py  openai_client.py
backend/app/logging/: __init__.py  setup.py
backend/app/pipeline/: clustering.py  competitor.py  expansion.py  language.py  llm_router.py  metrics.py  models.py  orchestrate.py  recursive_fanout.py  relevance.py  silo_anchor.py  silo_discovery.py
backend/app/pipeline/architecture/: __init__.py  generate.py  models.py
backend/app/pipeline/article_planning/: __init__.py  dedup.py  models.py  orchestrate_articles.py  orphan_promotion.py  serp.py  (+2 more)
backend/app/sie/: __init__.py  cache.py  entities.py  extract.py  filters.py  models.py  ngrams.py  pipeline.py  scoring.py  scrapeowl_client.py  serp.py  textrazor_client.py
backend/app/storage/: __init__.py  exports.py  silo.py  supabase_client.py
backend/app/writer/: __init__.py  adapter.py  budget.py  link_injector.py  link_targets.py  models.py  pipeline.py  schedule_planner.py  schedule_store.py  scheduler.py  serialize.py  slugs.py  store.py  templates.py  validators.py
backend/tests/: test_anthropic_retry.py  test_approvals.py  test_architecture.py  test_article_planning.py  test_briefgen_answer_contract.py  test_briefgen_assemble.py  test_briefgen_coverage.py  test_briefgen_entity.py  test_briefgen_faq_persona.py  test_briefgen_gates.py  test_briefgen_h3_decisionfit.py  test_briefgen_intent_title.py  test_briefgen_mcs.py  test_briefgen_models.py  test_briefgen_sources.py  test_cancel.py  test_cluster_dedupe.py  test_clustering.py  test_competitor.py  test_cost.py  test_cost_meter.py  test_csv_export.py  test_embedding_guard.py  test_embeddings.py  test_expansion.py  test_exports_api.py  test_health.py  test_language_filter.py  test_llm_router.py  test_locale.py  test_metrics_enrichment.py  test_orchestrate.py  test_orphan_promotion.py  test_peer_grouping.py  test_publish_markdown.py  test_recursive_fanout.py  test_relevance.py  test_roles.py  test_schedule_planner.py  test_sie_pure.py  (+8 more)
(+90 files in other folders)
