[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fanout-backend"
version = "0.1.0"
description = "Topic Fanout Tool — FastAPI backend (M1 foundation)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.32,<0.33",
  "supabase>=2.9,<3.0",
  "pydantic>=2.9,<3.0",
  "pydantic-settings>=2.6,<3.0",
  "python-json-logger>=2.0,<3.0",
  "openai>=1.54,<2.0",
  "anthropic>=0.39,<1.0",
  "httpx>=0.27,<0.28",
  "networkx>=3.2,<4.0",
  "python-louvain>=0.16,<0.17",
  "numpy>=1.26,<3.0",
  "lingua-language-detector>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "httpx>=0.27,<0.28",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
