[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fanout-backend"
version = "0.1.0"
description = "Topic Fanout Tool — FastAPI backend (M1 foundation)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.32,<0.33",
  "supabase>=2.9,<3.0",
  "pydantic>=2.9,<3.0",
  "pydantic-settings>=2.6,<3.0",
  "python-json-logger>=2.0,<3.0",
  "openai>=1.54,<2.0",
  "anthropic>=0.39,<1.0",
  "httpx>=0.27,<0.28",
  "networkx>=3.2,<4.0",
  "python-louvain>=0.16,<0.17",
  "numpy>=1.26,<3.0",
  "lingua-language-detector>=2.0,<3.0",
  # M12 SIE Term & Entity module (docs/sie-module-plan.md): page scraping/zone
  # extraction (bs4+lxml) and the locked spaCy lemmatizer. The en_core_web_sm
  # model is downloaded in the Dockerfile (§9 #1 — accepted in the image).
  "beautifulsoup4>=4.12,<5.0",
  "lxml>=5.0,<6.0",
  "spacy>=3.7,<4.0",
  # M14 Writer module (docs/writer-module-plan.md §4): title-case normalization
  # (PRD §5.18). Pure-python, pinned to match the Brief Generator's choice.
  "titlecase==2.4.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "httpx>=0.27,<0.28",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
